--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 
   </main>
 
+  <div class="copyright">
+    &copy; Copyright <span class="year"></span>; All rigths reserved.<br>Created by
+    <a href="https://github.com/AmirabasNasirzadeh" class="name">Amirabas Nasirzadeh</a>
+  </div>
 </body>
 
 </html>
